# paracord

./: Cargo.toml  README.md
benches/: lasso.rs  paracord.rs
paracord/: Cargo.toml
paracord-benches/: Cargo.toml  README.md
paracord-benches/benches/: global.rs  lasso.rs  lasso_global.rs  paracord.rs  paracord_global.rs  scoped.rs  ustr.rs  ustr_global.rs
paracord/src/: lib.rs  macros.rs  send_if_sync.rs  serde.rs  slice.rs
paracord/src/slice/: alloc.rs  lock_free.rs  mod.rs
src/: lib.rs  short_string.rs  slice.rs
