[package]
name = "paracord"
version = "0.1.0-rc.1"
edition = "2021"
license = "Apache-2.0"
description = "A fast, simple, multi-threaded string interning library"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]

[dependencies]
boxcar = "0.2"
thread_local = "1.1"
foldhash = "0.1"
clashmap = { version = "1.1", features = ["typesize"] }
typesize = "0.1"
typed-arena = "2"

[dev-dependencies]
divan = "0.1.17"
fastrand = "2"

lasso = { version = "0.7", features = ["multi-threaded"] }

[[bench]]
name = "paracord"
harness = false

[[bench]]
name = "lasso"
harness = false
