[package]
name = "paracord-benches"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.80.0"

[dependencies]

[dev-dependencies]
divan = { git = "https://github.com/conradludgate/divan", branch = "singletons" }
fastrand = "2"
foldhash = "0.1"
itoa = "1"

paracord = { path = "../paracord" }
lasso = { version = "0.7", features = ["multi-threaded"] }
ustr = "1.1.0"

[[bench]]
name = "scoped"
harness = false

[[bench]]
name = "global"
harness = false
